# COMP308

./: .gitignore  group_project_proposal.odt
work/: CMakeLists.txt
work/res/assets/: Boat.edg  Boat.nab  bunny.nab  dragon.nab  table.nab  teapot.edg  test_bone_2.asf
work/src/: CMakeLists.txt  TinyPngOut.cpp  geometry.cpp  geometry.hpp  imageLoader.hpp  main.cpp  skeleton.cpp  skeleton.hpp  splines.cpp  splines.hpp  texture.cpp  texture.hpp
